Prevent text in table cells from wrapping

--- a/Flex/static/css/style.less
+++ b/Flex/static/css/style.less
@@ -234,6 +234,7 @@ main {
         line-height: 20px;
         vertical-align: top;
         border-top: 1px solid #ddd;
+        white-space: nowrap;
       }
     }
   }
